chore: Improve performance on reserved values [DHIS2-21253]